--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -454,7 +454,7 @@ publications:
 - title: Assembling an Expressive Facial Animation System
   authors: Alice Wang, Michael Emmi, and Petros Faloutsos
   book: Proc. <abbr>ACM</abbr> <abbr>SIGGRAPH </abbr> Symposium on Video Games
-  acronym: Sandbox&nbsp;’07
+  acronym: <abbr>Sandbox</abbr>&nbsp;’07
   pages: 21–26
   publisher: <abbr>ACM</abbr>
   year: 2007
