Added birth data.

--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -1,6 +1,7 @@
 name: Michael Emmi
 nationality: American
-birthdate: April 11, 1981
+birth-date: April 11, 1981
+birth-place: Binghamton, <abbr>NY</abbr>, <abbr>USA</abbr>
 role: Researcher
 place: <abbr>IMDEA</abbr> Software Institute
 
