Typo: 4th NETYS.

--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -159,7 +159,7 @@ activities:
   URL:  http://fossacs.pps.univ-paris-diderot.fr
 
 - acronym: <abbr>NETYS</abbr>&nbsp;’16
-  desc: 2nd International Conference on Networked Systems
+  desc: 4th International Conference on Networked Systems
   role: Program Committee
   URL:  http://netys.net
 
